--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio1",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Payal3112.github.io/animated-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
