--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
   "name": "portfolio1",
   "version": "1.0.0",
-  "main": "index.js",
-  "description": "",
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "homepage": "https://Payal3112.github.io/animated-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "gh-pages": "^6.3.0",
-    "vite": "^7.0.6"
+    "vite": "^4.5.0"
   }
 }
